// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PeriodicRevenueChartLegend /> should render correctly 1`] = `
<Fragment>
  <ChartLegendItem
    color="#0A169A"
    label="Actual Revenue"
  />
</Fragment>
`;

exports[`<PeriodicRevenueChartLegend /> should render correctly when projections are present 1`] = `
<Fragment>
  <ChartLegendItem
    color="#0A169A"
    label="Actual Revenue"
  />
  <ChartLegendItem
    color="#38A9DB"
    label="Projected Revenue"
  />
</Fragment>
`;
